remove guava immutablelists from some server tests